// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CanvasForm should render 1`] = `
<div>
  <div
    class="pf-v5-c-card canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__header"
    >
      <div
        class="pf-v5-c-card__header-main"
      >
        <div
          class="pf-v5-l-grid pf-m-gutter"
        >
          <div
            class="pf-v5-l-grid__item pf-m-11-col form-header"
          >
            <img
              alt="icon"
              class="form-header__icon-1"
            />
            <h2
              class="pf-v5-c-title pf-m-xl form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-1"
              data-ouia-component-type="PF5/Title"
              data-ouia-safe="true"
            >
              My Node
            </h2>
          </div>
          <div
            class="pf-v5-l-grid__item pf-m-1-col"
          >
            <button
              aria-disabled="false"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-1"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-card__body canvas-form__body"
    >
      <form
        class="pf-v5-c-form"
        data-testid="autoform"
        novalidate=""
      >
        <div>
          <div
            class="pf-v5-c-form__group"
            data-fieldname="name"
            data-testid="wrapper-field"
          >
            <div
              class="pf-v5-c-form__group-label"
            >
              <label
                class="pf-v5-c-form__label"
                for="uniforms-0000-0005"
              >
                <span
                  class="pf-v5-c-form__label-text"
                >
                  Name
                </span>
              </label>
               
            </div>
            <div
              class="pf-v5-c-form__group-control"
            >
              <span
                class="pf-v5-c-form-control"
              >
                <input
                  aria-invalid="false"
                  aria-label="uniforms text field"
                  data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                  data-ouia-component-type="PF5/TextInput"
                  data-ouia-safe="true"
                  data-testid="text-field"
                  id="uniforms-0000-0005"
                  label="Name"
                  name="name"
                  type="text"
                  value="my node"
                />
              </span>
              <div
                class="pf-v5-c-form__helper-text"
              >
                <div
                  class="pf-v5-c-helper-text"
                >
                  <div
                    class="pf-v5-c-helper-text__item"
                  >
                    <span
                      class="pf-v5-c-helper-text__item-text"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`CanvasForm should render nothing if no schema and no definition is available 1`] = `
<div>
  <div
    class="pf-v5-c-card canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-4"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__header"
    >
      <div
        class="pf-v5-c-card__header-main"
      >
        <div
          class="pf-v5-l-grid pf-m-gutter"
        >
          <div
            class="pf-v5-l-grid__item pf-m-11-col form-header"
          >
            <img
              alt="icon"
              class="form-header__icon-1"
            />
            <h2
              class="pf-v5-c-title pf-m-xl form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-3"
              data-ouia-component-type="PF5/Title"
              data-ouia-safe="true"
            >
              My Node
            </h2>
          </div>
          <div
            class="pf-v5-l-grid__item pf-m-1-col"
          >
            <button
              aria-disabled="false"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-3"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-card__body canvas-form__body"
    >
      <div
        class="pf-v5-c-card"
        data-ouia-component-id="OUIA-Generated-Card-5"
        data-ouia-component-type="PF5/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-v5-c-card__header"
        >
          <div
            class="pf-v5-c-card__header-main"
          >
            <div
              class="pf-v5-c-card__title"
            >
              <div
                class="pf-v5-c-card__title-text"
              >
                Node source
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-card__body"
        >
          <div
            class="pf-v5-c-code-block"
          >
            <div
              class="pf-v5-c-code-block__content"
            >
              <pre
                class="pf-v5-c-code-block__pre"
              >
                <code
                  class="pf-v5-c-code-block__code"
                >
                  null

                </code>
              </pre>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-card__footer"
        >
          <div
            class="pf-v5-c-alert pf-m-warning"
            data-ouia-component-id="OUIA-Generated-Alert-warning-2"
            data-ouia-component-type="PF5/Alert"
            data-ouia-safe="true"
          >
            <div
              class="pf-v5-c-alert__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <h4
              class="pf-v5-c-alert__title"
            >
              <span
                class="pf-v5-screen-reader"
              >
                Warning alert:
              </span>
              Unknow node type
            </h4>
            <div
              class="pf-v5-c-alert__description"
            >
              The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CanvasForm should render nothing if no schema is available 1`] = `
<div>
  <div
    class="pf-v5-c-card canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-2"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__header"
    >
      <div
        class="pf-v5-c-card__header-main"
      >
        <div
          class="pf-v5-l-grid pf-m-gutter"
        >
          <div
            class="pf-v5-l-grid__item pf-m-11-col form-header"
          >
            <img
              alt="icon"
              class="form-header__icon-1"
            />
            <h2
              class="pf-v5-c-title pf-m-xl form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-2"
              data-ouia-component-type="PF5/Title"
              data-ouia-safe="true"
            />
          </div>
          <div
            class="pf-v5-l-grid__item pf-m-1-col"
          >
            <button
              aria-disabled="false"
              class="pf-v5-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-2"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v5-c-card__body canvas-form__body"
    >
      <div
        class="pf-v5-c-card"
        data-ouia-component-id="OUIA-Generated-Card-3"
        data-ouia-component-type="PF5/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-v5-c-card__header"
        >
          <div
            class="pf-v5-c-card__header-main"
          >
            <div
              class="pf-v5-c-card__title"
            >
              <div
                class="pf-v5-c-card__title-text"
              >
                Node source
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-card__body"
        >
          <div
            class="pf-v5-c-code-block"
          >
            <div
              class="pf-v5-c-code-block__content"
            >
              <pre
                class="pf-v5-c-code-block__pre"
              >
                <code
                  class="pf-v5-c-code-block__code"
                />
              </pre>
            </div>
          </div>
        </div>
        <div
          class="pf-v5-c-card__footer"
        >
          <div
            class="pf-v5-c-alert pf-m-warning"
            data-ouia-component-id="OUIA-Generated-Alert-warning-1"
            data-ouia-component-type="PF5/Alert"
            data-ouia-safe="true"
          >
            <div
              class="pf-v5-c-alert__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 576 512"
                width="1em"
              >
                <path
                  d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </div>
            <h4
              class="pf-v5-c-alert__title"
            >
              <span
                class="pf-v5-screen-reader"
              >
                Warning alert:
              </span>
              Unknow node type
            </h4>
            <div
              class="pf-v5-c-alert__description"
            >
              The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
